Assignment1/target/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'main'", "'='", 
                     "':='", "'return'", "'true'", "'false'", "'else'", 
                     "'if'", "'then'", "'void'", "'int'", "'float'", "'string'", 
                     "'boolean'", "'for'", "'to'", "'downto'", "'do'", "'break'", 
                     "'continue'", "'class'", "'extends'", "'new'", "'nil'", 
                     "'this'", "'final'", "'static'", "'&&'", "'||'", "'!'", 
                     "'<'", "'>'", "'=='", "'!='", "'<='", "'>='", "'+'", 
                     "'-'", "'*'", "'%'", "'\\'", "'/'", "'^'", "<INVALID>", 
                     "'{'", "'}'", "'('", "')'", "'['", "']'", "'.'", "','", 
                     "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "LINECOMMENT", "BLOCKCOMMENT", "MAIN", 
                      "EQUAL_SIGN", "ASSIGN", "RETURN", "TRUE", "FALSE", 
                      "ELSE", "IF", "THEN", "VOID", "INT", "FLOAT", "STRING", 
                      "BOOLEAN", "FOR", "TO", "DOWNTO", "DO", "BREAK", "CONTINUE", 
                      "CLASS", "EXTENDS", "NEW", "NIL", "THIS", "FINAL", 
                      "STATIC", "AND", "OR", "NOT", "LESS", "GREATER", "EQUAL", 
                      "NOT_EQUAL", "LESS_EQUAL", "GREATER_EQUAL", "PLUS", 
                      "MINUS", "MULTIPLY", "MODULUS", "I_DIVIDE", "F_DIVIDE", 
                      "CONCATENATE", "OBJECT_NEW", "LP", "RP", "LB", "RB", 
                      "LSB", "RSB", "DOT", "COMMA", "COLON", "S_COLON", 
                      "WS", "INTEGER_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", 
                      "ID", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classDecl = 1
    RULE_memDecl = 2
    RULE_attributeDecl = 3
    RULE_immutableAttrDecl = 4
    RULE_mutableAttrDecl = 5
    RULE_mutableObjAttrDecl = 6
    RULE_immutableInitialize = 7
    RULE_mutableInitialize = 8
    RULE_mutableObjInitialize = 9
    RULE_objInit = 10
    RULE_attributeType = 11
    RULE_scalarType = 12
    RULE_compositeType = 13
    RULE_methodDecl = 14
    RULE_constructorDecl = 15
    RULE_normalMethodDecl = 16
    RULE_normalVoidMethodDecl = 17
    RULE_mainMethodDecl = 18
    RULE_paramList = 19
    RULE_params = 20
    RULE_monoParams = 21
    RULE_polyParams = 22
    RULE_paramType = 23
    RULE_classParamType = 24
    RULE_polyParam = 25
    RULE_monoParam = 26
    RULE_returnType = 27
    RULE_stmt = 28
    RULE_blockStmt = 29
    RULE_stmtWithoutReturn = 30
    RULE_voidBlockStmt = 31
    RULE_cstrBlockStmt = 32
    RULE_cstrVarDecl = 33
    RULE_varDecl = 34
    RULE_immutableVarDecl = 35
    RULE_mutableVarDecl = 36
    RULE_mutableObjVarDecl = 37
    RULE_immutableCstrVarDecl = 38
    RULE_mutableCstrVarDecl = 39
    RULE_mutableObjCstrVarDecl = 40
    RULE_immutableCstrVarInit = 41
    RULE_mutableCstrVarInit = 42
    RULE_mutableObjCstrVarInit = 43
    RULE_scalarVar = 44
    RULE_assignStmt = 45
    RULE_lhs = 46
    RULE_ifStmt = 47
    RULE_ifStmtWithoutReturn = 48
    RULE_forStmt = 49
    RULE_forStmtWithoutReturn = 50
    RULE_invokeStmt = 51
    RULE_arrayVar = 52
    RULE_breakStmt = 53
    RULE_continueStmt = 54
    RULE_returnStmt = 55
    RULE_className = 56
    RULE_exp = 57
    RULE_exp1 = 58
    RULE_exp2 = 59
    RULE_exp3 = 60
    RULE_exp4 = 61
    RULE_exp5 = 62
    RULE_exp6 = 63
    RULE_exp7 = 64
    RULE_exp8 = 65
    RULE_exp9 = 66
    RULE_exp10 = 67
    RULE_exp11 = 68
    RULE_adding = 69
    RULE_multiply = 70
    RULE_logical = 71
    RULE_equality = 72
    RULE_relational = 73
    RULE_indexOp = 74
    RULE_methodInvoke = 75
    RULE_listExp = 76
    RULE_arguList = 77
    RULE_bool_literal = 78
    RULE_literal = 79
    RULE_array_literal = 80

    ruleNames =  [ "program", "classDecl", "memDecl", "attributeDecl", "immutableAttrDecl", 
                   "mutableAttrDecl", "mutableObjAttrDecl", "immutableInitialize", 
                   "mutableInitialize", "mutableObjInitialize", "objInit", 
                   "attributeType", "scalarType", "compositeType", "methodDecl", 
                   "constructorDecl", "normalMethodDecl", "normalVoidMethodDecl", 
                   "mainMethodDecl", "paramList", "params", "monoParams", 
                   "polyParams", "paramType", "classParamType", "polyParam", 
                   "monoParam", "returnType", "stmt", "blockStmt", "stmtWithoutReturn", 
                   "voidBlockStmt", "cstrBlockStmt", "cstrVarDecl", "varDecl", 
                   "immutableVarDecl", "mutableVarDecl", "mutableObjVarDecl", 
                   "immutableCstrVarDecl", "mutableCstrVarDecl", "mutableObjCstrVarDecl", 
                   "immutableCstrVarInit", "mutableCstrVarInit", "mutableObjCstrVarInit", 
                   "scalarVar", "assignStmt", "lhs", "ifStmt", "ifStmtWithoutReturn", 
                   "forStmt", "forStmtWithoutReturn", "invokeStmt", "arrayVar", 
                   "breakStmt", "continueStmt", "returnStmt", "className", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "exp8", "exp9", "exp10", "exp11", "adding", "multiply", 
                   "logical", "equality", "relational", "indexOp", "methodInvoke", 
                   "listExp", "arguList", "bool_literal", "literal", "array_literal" ]

    EOF = Token.EOF
    LINECOMMENT=1
    BLOCKCOMMENT=2
    MAIN=3
    EQUAL_SIGN=4
    ASSIGN=5
    RETURN=6
    TRUE=7
    FALSE=8
    ELSE=9
    IF=10
    THEN=11
    VOID=12
    INT=13
    FLOAT=14
    STRING=15
    BOOLEAN=16
    FOR=17
    TO=18
    DOWNTO=19
    DO=20
    BREAK=21
    CONTINUE=22
    CLASS=23
    EXTENDS=24
    NEW=25
    NIL=26
    THIS=27
    FINAL=28
    STATIC=29
    AND=30
    OR=31
    NOT=32
    LESS=33
    GREATER=34
    EQUAL=35
    NOT_EQUAL=36
    LESS_EQUAL=37
    GREATER_EQUAL=38
    PLUS=39
    MINUS=40
    MULTIPLY=41
    MODULUS=42
    I_DIVIDE=43
    F_DIVIDE=44
    CONCATENATE=45
    OBJECT_NEW=46
    LP=47
    RP=48
    LB=49
    RB=50
    LSB=51
    RSB=52
    DOT=53
    COMMA=54
    COLON=55
    S_COLON=56
    WS=57
    INTEGER_LITERAL=58
    FLOAT_LITERAL=59
    STRING_LITERAL=60
    ID=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassDeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 162
                self.classDecl()
                self.state = 165 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASS):
                    break

            self.state = 167
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def memDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.MemDeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.MemDeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecl" ):
                return visitor.visitClassDecl(self)
            else:
                return visitor.visitChildren(self)




    def classDecl(self):

        localctx = BKOOLParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(BKOOLParser.CLASS)
            self.state = 170
            self.match(BKOOLParser.ID)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 171
                self.match(BKOOLParser.EXTENDS)
                self.state = 172
                self.match(BKOOLParser.ID)


            self.state = 175
            self.match(BKOOLParser.LP)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.VOID) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.ID))) != 0):
                self.state = 176
                self.memDecl()
                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 182
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeDecl(self):
            return self.getTypedRuleContext(BKOOLParser.AttributeDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(BKOOLParser.MethodDeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_memDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemDecl" ):
                return visitor.visitMemDecl(self)
            else:
                return visitor.visitChildren(self)




    def memDecl(self):

        localctx = BKOOLParser.MemDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_memDecl)
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.attributeDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.methodDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def immutableAttrDecl(self):
            return self.getTypedRuleContext(BKOOLParser.ImmutableAttrDeclContext,0)


        def mutableAttrDecl(self):
            return self.getTypedRuleContext(BKOOLParser.MutableAttrDeclContext,0)


        def mutableObjAttrDecl(self):
            return self.getTypedRuleContext(BKOOLParser.MutableObjAttrDeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attributeDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributeDecl" ):
                return visitor.visitAttributeDecl(self)
            else:
                return visitor.visitChildren(self)




    def attributeDecl(self):

        localctx = BKOOLParser.AttributeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attributeDecl)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 188
                self.immutableAttrDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 189
                self.mutableAttrDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 190
                self.mutableObjAttrDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImmutableAttrDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeType(self):
            return self.getTypedRuleContext(BKOOLParser.AttributeTypeContext,0)


        def S_COLON(self):
            return self.getToken(BKOOLParser.S_COLON, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def immutableInitialize(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ImmutableInitializeContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ImmutableInitializeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def getRuleIndex(self):
            return BKOOLParser.RULE_immutableAttrDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImmutableAttrDecl" ):
                return visitor.visitImmutableAttrDecl(self)
            else:
                return visitor.visitChildren(self)




    def immutableAttrDecl(self):

        localctx = BKOOLParser.ImmutableAttrDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_immutableAttrDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 193
                self.match(BKOOLParser.FINAL)
                pass

            elif la_ == 2:
                self.state = 194
                self.match(BKOOLParser.FINAL)
                self.state = 195
                self.match(BKOOLParser.STATIC)
                pass

            elif la_ == 3:
                self.state = 196
                self.match(BKOOLParser.STATIC)
                self.state = 197
                self.match(BKOOLParser.FINAL)
                pass


            self.state = 200
            self.attributeType()

            self.state = 201
            self.match(BKOOLParser.ID)
            self.state = 202
            self.immutableInitialize()
            self.state = 209
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.COMMA:
                self.state = 204
                self.match(BKOOLParser.COMMA)

                self.state = 205
                self.match(BKOOLParser.ID)
                self.state = 206
                self.immutableInitialize()
                self.state = 211
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 212
            self.match(BKOOLParser.S_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MutableAttrDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeType(self):
            return self.getTypedRuleContext(BKOOLParser.AttributeTypeContext,0)


        def S_COLON(self):
            return self.getToken(BKOOLParser.S_COLON, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def mutableInitialize(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.MutableInitializeContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.MutableInitializeContext,i)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def getRuleIndex(self):
            return BKOOLParser.RULE_mutableAttrDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMutableAttrDecl" ):
                return visitor.visitMutableAttrDecl(self)
            else:
                return visitor.visitChildren(self)




    def mutableAttrDecl(self):

        localctx = BKOOLParser.MutableAttrDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mutableAttrDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 215
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 214
                self.match(BKOOLParser.STATIC)


            self.state = 217
            self.attributeType()

            self.state = 218
            self.match(BKOOLParser.ID)
            self.state = 219
            self.mutableInitialize()
            self.state = 226
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.COMMA:
                self.state = 221
                self.match(BKOOLParser.COMMA)

                self.state = 222
                self.match(BKOOLParser.ID)
                self.state = 223
                self.mutableInitialize()
                self.state = 228
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 229
            self.match(BKOOLParser.S_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MutableObjAttrDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def S_COLON(self):
            return self.getToken(BKOOLParser.S_COLON, 0)

        def mutableObjInitialize(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.MutableObjInitializeContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.MutableObjInitializeContext,i)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def LSB(self):
            return self.getToken(BKOOLParser.LSB, 0)

        def INTEGER_LITERAL(self):
            return self.getToken(BKOOLParser.INTEGER_LITERAL, 0)

        def RSB(self):
            return self.getToken(BKOOLParser.RSB, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def getRuleIndex(self):
            return BKOOLParser.RULE_mutableObjAttrDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMutableObjAttrDecl" ):
                return visitor.visitMutableObjAttrDecl(self)
            else:
                return visitor.visitChildren(self)




    def mutableObjAttrDecl(self):

        localctx = BKOOLParser.MutableObjAttrDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mutableObjAttrDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 232
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 231
                self.match(BKOOLParser.STATIC)


            self.state = 234
            self.match(BKOOLParser.ID)
            self.state = 238
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.LSB:
                self.state = 235
                self.match(BKOOLParser.LSB)
                self.state = 236
                self.match(BKOOLParser.INTEGER_LITERAL)
                self.state = 237
                self.match(BKOOLParser.RSB)


            self.state = 240
            self.match(BKOOLParser.ID)
            self.state = 241
            self.mutableObjInitialize()
            self.state = 248
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.COMMA:
                self.state = 243
                self.match(BKOOLParser.COMMA)

                self.state = 244
                self.match(BKOOLParser.ID)
                self.state = 245
                self.mutableObjInitialize()
                self.state = 250
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 251
            self.match(BKOOLParser.S_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImmutableInitializeContext(ParserRuleContext):
        __slots__ = 'parser'
